Fix edge contrast case

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
     --color-dark-blue: #1a1e42;
     --color-light-blue: #2A2D51;
     --color-dark-blue-faded: rgb(26, 30, 66, 0.80);
-    --color-bold-orange: #e76c07;
+    --color-bold-orange: #cc5900;
     --color-bold-green: #00B67A;
     --color-grey-600: #475467;
     --color-grey-500: #667085;
